# cookiecutter-fastapi-databases-di

./: README.md  cookiecutter.json
{{cookiecutter.service_name}}/: .dockerignore  .flake8  .pre-commit-config.yaml  alembic.ini  docker-compose.yaml  lets.yaml  mypy.ini  pyproject.toml
{{cookiecutter.service_name}}/.github/workflows/: tests.yaml
{{cookiecutter.service_name}}/alembic/: env.py
{{cookiecutter.service_name}}/alembic/versions/: README.md
{{cookiecutter.service_name}}/configs/: container_dev.yaml  dev.yaml
{{cookiecutter.service_name}}/docker/: dev.Dockerfile
{{cookiecutter.service_name}}/requirements/: README.md
{{cookiecutter.service_name}}/src/{{cookiecutter.service_name}}/: __init__.py  _containers.py  _dtos.py  _endpoints.py  _events.py  _models.py  _repositories.py  _services.py  _tables.py  config.py  main.py
{{cookiecutter.service_name}}/tests/: __init__.py  conftest.py  schemas.py  test_config.py  test_endpoints.py
